fleet/overlays/manifest/virtualservice.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: mygraph
  spec:
    hosts:
    - mygraph.renlm.cn
    gateways:
    - istio-system/mygraph-gateway
    http:
    - match:
      - port: 80
      - port: 443
      route:
      - weight: 100
        destination:
          host: mygraph
          port:
            number: 8080
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: rabbitmq
  spec:
    hosts:
    - rabbitmq.renlm.cn
    gateways:
    - istio-system/mygraph-gateway
    http:
    - match:
      - port: 80
      - port: 443
      route:
      - weight: 100
        destination:
          host: rabbitmq
          port:
            number: 15672
